// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Podcast Promo Card Content should match snapshot 1`] = `
.emotion-0 {
  padding: 0.5rem;
  display: inline-block;
  max-width: calc(100% - 96px);
}

@media (min-width:25rem) {
  .emotion-0 {
    padding: 0.5rem 1rem;
    max-width: calc(100% - 117px);
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    padding: 0.5rem 1rem;
    max-width: calc(100% - 178px);
  }
}

@media (min-width:63rem) {
  .emotion-0 {
    padding: 1rem;
    max-width: initial;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    Content
  </div>
</div>
`;

exports[`Podcast Promo Card Description should match snapshot 1`] = `
.emotion-0 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  max-width: 30rem;
  color: #6E6E73;
  margin-top: 0.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

<div>
  <p
    class="emotion-0 emotion-1"
  >
    Content
  </p>
</div>
`;

exports[`Podcast Promo Card Image should match snapshot 1`] = `
.emotion-0 {
  width: 88px;
  display: inline-block;
  vertical-align: top;
  margin: 8px 0 0 8px;
}

@media (min-width:25rem) {
  .emotion-0 {
    width: 109px;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    width: 178px;
    margin: 0;
  }
}

@media (min-width:63rem) {
  .emotion-0 {
    width: 100%;
    margin: 0;
  }
}

<div>
  <figure
    class="emotion-0 emotion-1"
  >
    Content
  </figure>
</div>
`;

exports[`Podcast Promo Card Link should match snapshot 1`] = `
.emotion-0 {
  color: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

.emotion-0:before {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  content: '';
  overflow: hidden;
  z-index: 1;
}

.emotion-0:visited .podcast-promo--visited {
  color: #AEAEB5;
}

.emotion-0:focus .podcast-promo--focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <a
    class="emotion-0 emotion-1"
    href="https://www.bbc.com"
  >
    Content
  </a>
</div>
`;

exports[`Podcast Promo Card Title should match snapshot 1`] = `
.emotion-0 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  margin-top: 0;
  margin-bottom: 0.5rem;
  color: #222222;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

<div>
  <h3
    class="emotion-0 emotion-1"
  >
    Content
  </h3>
</div>
`;

exports[`Podcast Promo Card should match snapshot 1`] = `
.emotion-0 {
  position: relative;
  background-color: #FFFFFF;
}

.emotion-0:hover .podcast-promo--hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    Content
  </div>
</div>
`;

exports[`Podcast Promo Title should match snapshot 1`] = `
.emotion-6 {
  margin: 0 0 1rem;
}

.emotion-2 > svg {
  margin-left: 0;
  width: 22px;
  height: 22px;
  fill: currentColor;
  position: relative;
  bottom: 5px;
  right: 3px;
}

.emotion-0 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 1rem;
  height: 1rem;
}

.emotion-4 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  display: inline;
  color: #222222;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

<div>
  <div
    class="emotion-6 emotion-7"
  >
    <i
      class="emotion-2 emotion-3"
    >
      <svg
        aria-hidden="true"
        class="emotion-0 emotion-1"
        focusable="false"
        height="32"
        viewBox="0 0 32 32"
        width="32"
      >
        <path
          d="M18.7,31h-5.3l-2.3-10.4C12.3,19.5,14,19,16,19s3.7,0.5,4.9,1.7L18.7,31z M22,8.2c-1.7-1.7-3.9-2.5-6.1-2.5s-4.4,0.9-6,2.5 l1.7,1.7c1.2-1.2,2.7-1.8,4.3-1.8s3.1,0.6,4.3,1.8L22,8.2z M25.5,4.9c-2.6-2.7-6.1-4-9.5-4S9.1,2.3,6.5,4.9l1.7,1.7 c2.1-2.1,4.9-3.2,7.7-3.2c2.8,0,5.6,1.1,7.8,3.2L25.5,4.9z M12.4,14c0,2,1.5,3.6,3.6,3.6c2,0,3.6-1.5,3.6-3.6 c0-2.1-1.5-3.6-3.6-3.6C13.9,10.4,12.4,11.9,12.4,14z"
        />
      </svg>
    </i>
    <h2
      class="emotion-4 emotion-5"
    >
      Content
    </h2>
  </div>
</div>
`;

exports[`Podcast Promo card-call-to-action should match snapshot 1`] = `
.emotion-2 > svg {
  width: 16px;
  height: 16px;
  fill: currentColor;
  position: relative;
  bottom: 2px;
  right: 3px;
}

.emotion-0 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 1rem;
  height: 1rem;
}

.emotion-4 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #6E6E73;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

<div>
  <span
    aria-hidden="true"
  >
    <i
      class="emotion-2 emotion-3"
    >
      <svg
        aria-hidden="true"
        class="emotion-0 emotion-1"
        focusable="false"
        height="32"
        viewBox="0 0 32 32"
        width="32"
      >
        <polygon
          points="4 6 11.1 6 26 6 26 28 28 28 28 4 4 4 4 6"
        />
        <polygon
          points="8 0 8 2 30 2 30 24 32 24 32 0 8 0"
        />
        <path
          d="M0,32H24V8H0ZM4,12H20V28H4Z"
        />
      </svg>
    </i>
    <span
      class="emotion-4 emotion-5"
    >
      Click Me
    </span>
  </span>
</div>
`;
